statistics/statistics-mf/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: statistics-mf-service
  labels:
    app: statistics-mf-service
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 3005
      targetPort: 3005
  selector:
    app: statistics-mf-deployment
