statistics/statistics-mf/k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: statistics-mf-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: statistics-mf.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: statistics-mf
                port:
                  number: 80
